--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <nav>
             <h1>TWWWE</h1>
 
-                <ul class="menu">
-                    <li><a href="#!">Internet promotions tips and real truthful facts</a></li>
-                    <li><a href="#!">Favourites fonts</a></li>
-                    <li><a href="#!">Amazing Colors</a></li>
-                    <li><a href="#!">Our favorite software</a></li>
-                    <li><a href="#!">TRUMPglish</a></li>
-                </ul>
+            <ul class="menu">
+                <li><a href="#!">Internet promotions tips and real truthful facts</a></li>
+                <li><a href="#!">Favourites fonts</a></li>
+                <li><a href="#!">Amazing Colors</a></li>
+                <li><a href="#!">Our favorite software</a></li>
+                <li><a href="#!">TRUMPglish</a></li>
+            </ul>
 
         </nav>
 
@@ -57,8 +57,12 @@
 
             <article>
                 <h2>We are now on social media!</h2>
-                <p>Follow us on TWITTER for the absolute "best" design and internet promotion tips you can get anywhere. <br><br>
-                    <a href="https://twitter.com/worldsworstweb?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @worldsworstweb</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+                <p>Follow us on TWITTER for the absolute "best" design and internet promotion tips you can get anywhere.
+                    <br><br>
+                    <a href="https://twitter.com/worldsworstweb?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+                        data-show-count="false">Follow @worldsworstweb</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </p>
             </article>
             <article>
                 <h2>Traffic stats</h2>
@@ -141,6 +145,14 @@
                 <h2>Time to LOL! YOUR MOM JOKE OF THE CENTURY</h2>
                 <p>Your mom's so old that her social security number is <span>1</span></p>
             </article>
+            <article>
+                <h2>Please hit the play button for the full effect of enjoiying TWWWE!</h2>
+                <audio controls>
+                    <source src="music/Music2.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+
+            </article>
         </div>
         <div class="twitter">
             <a class="twitter-timeline" href="https://twitter.com/worldsworstweb?ref_src=twsrc%5Etfw">Tweets by
@@ -148,6 +160,9 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </main>
+
+
+
     <footer>
         <p>This sight was best viewed through Internet Explorer but they got rid of
             that, so probably Firefox. View through at least a 1024x768 resolution -
