--- a/index.html
+++ b/index.html
@@ -160,6 +160,49 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </main>
+    <section class="contacto" id="contacto">
+
+        <h1 class="heading">Contacto</h1>
+
+        <div class="bax">
+            <div class="contact form">
+                <h3>Envianos un mensaje</h3>
+                <form>
+                    <div class="formBox">
+                        <div class="row50">
+                            <div class="inputBox">
+                                <span>Nombre</span>
+                                <input type="text" placeholder="Nombre">
+                            </div>
+                            <div class="inputBox">
+                                <span>Apellido</span>
+                                <input type="text" placeholder="Apellido">
+                            </div>
+                        </div>
+                        <div class="row50">
+                            <div class="inputBox">
+                                <span>Email</span>
+                                <input type="text" placeholder="@gmail.com">
+                            </div>
+                            <div class="inputBox">
+                                <span>Telefono</span>
+                                <input  type="text" placeholder="Telefono">
+                            </div>
+                        </div>
+                        <div class="row100">
+                            <div class="inputBox">
+                                <span>Mensaje</span>
+                                <textarea placeholder="Escribe tu mensaje aqui..."></textarea>
+                            </div>
+                        </div>
+                        <div class="row100">
+                            <div class="inputBox">
+                               <input type="submit" value="Enviar">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
 
 
 
